# ircnx

./: Cargo.toml  config.toml  motd.txt  notes.txt  readme.md  readme.txt  schema.txt
.idx/: dev.nix
config/: ircd.toml
src/: client.rs  config.rs  connection.rs  handle_connection.rs  main.rs  parser.rs  server.rs  user.rs
src/channels/: channel.rs  member.rs  mod.rs
src/commands/: ircvers.rs  mod.rs  mode.rs  nick.rs
src/config/: mod.rs
src/connections/: mod.rs  server.rs  user.rs
src/handle_connection/commands/: mode.rs
src/parser/: mod.rs
src/transport/: irc.rs
