[package]
name = "app"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.15", features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }
regex = { version = "1.11" }